--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "git-commit-msg-linter": "^4.9.4",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "eslint-config-standard-with-typescript": "^34.0.1"
   }
 }
