--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "git-commit-msg-linter": "^4.9.4",
     "husky": "^8.0.0",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
   "husky": {
