--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:staged": "jest",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "husky": {
@@ -29,6 +31,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "eslint 'src/**' --fix",
+      "npm run test:staged",
       "git add"
     ]
   }
