--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/validator": "^13.7.15",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "git-commit-msg-linter": "^4.9.4",
     "husky": "^8.0.0",
@@ -37,5 +38,8 @@
       "eslint 'src/**' --fix",
       "npm run test:staged"
     ]
+  },
+  "dependencies": {
+    "validator": "^13.9.0"
   }
 }
